Update cloud player; add search capability

--- a/app/views/layouts/cloud.html.erb
+++ b/app/views/layouts/cloud.html.erb
@@ -12,6 +12,7 @@
     <script src="/javascripts/md5.js" type="text/javascript"></script>
     <script src="/javascripts/jquery-ui-personalized-1.6rc2.js" type="text/javascript"></script>
     <script src="/javascripts/jquery.cookie.js" type="text/javascript"></script>
+    <script src="/javascripts/jquery.history_remote.js" type="text/javascript"></script>
     <script src="/javascripts/cloud/utils.js" type="text/javascript"></script>
     <script src="/javascripts/cloud/player.js" type="text/javascript"></script>
     <script src="/javascripts/cloud/playlist.js" type="text/javascript"></script>
