Add logged-in class to cloud player

--- a/app/views/layouts/cloud.html.erb
+++ b/app/views/layouts/cloud.html.erb
@@ -20,7 +20,7 @@
     <link href="/images/cloud/favicon.ico" rel="shortcut icon" />
 
   </head>
-  <body class="" unselectable="on">
+  <body class="logged-in" unselectable="on">
     <div id="flash"><div></div></div>
     <div id="header">
       <div id="login">
