Photo playlist template

--- a/app/views/cloud/index.html.erb
+++ b/app/views/cloud/index.html.erb
@@ -1,3 +1,4 @@
+
 <div id="main-container">
   <div id="artist-info">
     <div>
@@ -163,6 +164,15 @@
 	<td></td>
       </tr>
     </table>
+  </div>
+  
+  <div id="gallery">
+    <a href="#" id="photo-link">
+      <div id="gallery-photo">
+	<img />
+	<span id="gallery-photo-title"/>
+      </div>
+    </a>
   </div>
 
 </div>
