Add searching capability to iphone interface.  Doesn't download yet.

--- a/app/views/layouts/iphone.html.erb
+++ b/app/views/layouts/iphone.html.erb
@@ -9,6 +9,10 @@
 <meta name="apple-touch-fullscreen" content="YES" />
 <style type="text/css" media="screen">@import "/stylesheets/iui.css";</style>
 <script type="application/x-javascript" src="/javascripts/iui.js"></script>
+<script type="application/x-javascript" src="/javascripts/jquery.js"></script>
+<script type="application/x-javascript" src="/javascripts/jquery-periodic.js"></script>
+<script type="application/x-javascript" src="/javascripts/iphone-search.js"></script>
+
 <!--
 <script type="application/x-javascript" src="http://10.0.1.2:1840/ibug.js"></script>
 -->
