--- a/app/views/iphone/index.html.erb
+++ b/app/views/iphone/index.html.erb
@@ -2,15 +2,14 @@
     <div class="toolbar">
         <h1 id="pageTitle"></h1>
         <a id="backButton" class="button" href="#"></a>
-        <a class="button" href="#searchForm">Search</a>
+        <a class="button" href="#search_form">Search</a>
     </div>
     
     <ul id="home" title="LimeWire" selected="true">
-      <center>
-        <img src="/images/limewire.png" alt="limewire" style="margin: 10px auto;"/>
-      </center>
+        <img src="/images/limewire.png" alt="limewire" style="display: block; margin: 10px auto;"/>
         <li><a href="#artists">Artists</a></li>
         <li><a href="#songs">Songs</a></li>
+	<li><a href="#search">Search</a></li>
         <li><a href="#stats">Stats</a></li>
     </ul>
     <ul id="artists" title="Artists">
@@ -54,15 +53,13 @@
         <h2>If this weren't just a demo, you might be hearing a song...</h2>
     </div>
     
-    <form id="searchForm" class="dialog" action="search.php">
+    <form id="search_form" class="dialog" action="/iphone/search">
         <fieldset>
-            <h1>Music Search</h1>
+            <h1>Search</h1>
             <a class="button leftButton" type="cancel">Cancel</a>
-            <a class="button blueButton" type="submit">Search</a>
+            <a class="button blueButton" type="submit" id="search_submit">Search</a>
             
-            <label>Artist:</label>
-            <input id="artist" type="text" name="artist"/>
-            <label>Song:</label>
-            <input type="text" name="song"/>
+            <label>Search term</label>
+            <input id="q" type="text" name="q"/>
         </fieldset>
     </form>
