Make downloading work on the iphone interface

--- a/app/views/iphone/index.html.erb
+++ b/app/views/iphone/index.html.erb
@@ -2,7 +2,7 @@
     <div class="toolbar">
         <h1 id="pageTitle"></h1>
         <a id="backButton" class="button" href="#"></a>
-        <a class="button" href="#search_form">Search</a>
+        <a class="button" href="#searchForm">Search</a>
     </div>
     
     <ul id="home" title="LimeWire" selected="true">
@@ -53,13 +53,13 @@
         <h2>If this weren't just a demo, you might be hearing a song...</h2>
     </div>
     
-    <form id="search_form" class="dialog" action="/iphone/search">
+    <form id="searchForm" class="dialog" action="/iphone/search">
         <fieldset>
             <h1>Search</h1>
             <a class="button leftButton" type="cancel">Cancel</a>
             <a class="button blueButton" type="submit" id="search_submit">Search</a>
             
-            <label>Search term</label>
+            <label>Term:</label>
             <input id="q" type="text" name="q"/>
         </fieldset>
     </form>
