--- a/app/views/backup/index.html.erb
+++ b/app/views/backup/index.html.erb
@@ -1,4 +1,13 @@
-<% form_tag backups_url(:action => 'create'), :method => 'post' do |f| -%>
+<% javascript_include 'backup' -%>
+
+<h1>Backup</h1>
+<p>You have <b><%= FileSize.new(@library_size).to_s -%></b> in your library.
+<p>The transfer rate is <b>$<%= print_dollars(@transfer_rate.gigabytes) -%> per GB</b>,
+   so your transfer cost to back up your library is approximately $<b><%= print_dollars(@library_size * @transfer_rate) -%></b>.</p>
+<p>The storage rate is <b>$<%= print_dollars(@storage_rate.gigabytes) -%> per GB</b>,
+   so your storage cost will be approximately <b>$<%= print_dollars(@library_size * @storage_rate) -%> <u>per month</u></b>.</p>
+
+<% form_tag backups_url(:action => 'create'), :method => 'post', :id => 'start_backup' do |f| -%>
   <div>
     <%= label_tag :aws_id, "AWS Key" -%>
     <%= text_field_tag :aws_key -%>
@@ -8,6 +17,18 @@
     <%= text_field_tag :aws_secret -%>
   </div>
   <div>
-    <%= submit_tag "Backup" -%>
+    <%= submit_tag "Start Backup" -%>
   </div>
 <% end -%>
+
+<div id="status" style="display: none;">
+  <div id="current_file"></div>
+  <div id="file_progress">
+    <div id="file_progress_indicator"></div>
+  </div>
+  <div id="percentage"></div>
+  <div id="total_progress">
+    <div id="total_progress_indicator"></div>
+  </div>
+  <button id="stop_backup">Stop Backup</button>
+</div>
