Move iphone assets over to plugin

--- a/plugins/iphone/views/layouts/iphone.html.erb
+++ b/plugins/iphone/views/layouts/iphone.html.erb
@@ -5,13 +5,13 @@
 <head>
 <title>LimeWire Remote</title>
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
-<link rel="apple-touch-icon" href="/images/iui/iui-logo-touch-icon.png" />
+<link rel="apple-touch-icon" href="/assets/iphone/images/iui-logo-touch-icon.png" />
 <meta name="apple-touch-fullscreen" content="YES" />
-<style type="text/css" media="screen">@import "/stylesheets/iui.css";</style>
-<script type="application/x-javascript" src="/javascripts/iui.js"></script>
+<style type="text/css" media="screen">@import "/assets/iphone/stylesheets/iui.css";</style>
+<script type="application/x-javascript" src="/assets/iphone/javascripts/iui.js"></script>
 <script type="application/x-javascript" src="/javascripts/jquery.js"></script>
 <script type="application/x-javascript" src="/javascripts/jquery-periodic.js"></script>
-<script type="application/x-javascript" src="/javascripts/iphone-search.js"></script>
+<script type="application/x-javascript" src="/assets/iphone/javascripts/iphone-search.js"></script>
 
 <!--
 <script type="application/x-javascript" src="http://10.0.1.2:1840/ibug.js"></script>
