--- a/plugins/iphone/public/stylesheets/iui.css
+++ b/plugins/iphone/public/stylesheets/iui.css
@@ -30,14 +30,14 @@ body > *[selected="true"] {
 
 a[selected], a:active {
     background-color: #194fdb !important;
-    background-image: url(/images/iui/listArrowSel.png), url(/images/iui/selection.png) !important;
+    background-image: url(/assets/iphone/images/listArrowSel.png), url(/assets/iphone/images/selection.png) !important;
     background-repeat: no-repeat, repeat-x;
     background-position: right center, left top;
     color: #FFFFFF !important;
 }
 
 a[selected="progress"] {
-    background-image: url(/images/iui/loading.gif), url(/images/iui/selection.png) !important;
+    background-image: url(/assets/iphone/images/loading.gif), url(/assets/iphone/images/selection.png) !important;
 }
 
 /************************************************************************************************/
@@ -50,7 +50,7 @@ body > .toolbar {
     border-top: 1px solid #6d84a2;
     padding: 10px;
     height: 45px;
-    background: url(/images/iui/toolbar.png) #6d84a2 repeat-x;
+    background: url(/assets/iphone/images/toolbar.png) #6d84a2 repeat-x;
 }
 
 .toolbar > h1 {
@@ -94,11 +94,11 @@ body[orient="landscape"] > .toolbar > h1 {
     text-decoration: none;
     white-space: nowrap;
     background: none;
-    -webkit-border-image: url(/images/iui/toolButton.png) 0 5 0 5;
+    -webkit-border-image: url(/assets/iphone/images/toolButton.png) 0 5 0 5;
 }
 
 .blueButton {
-    -webkit-border-image: url(/images/iui/blueButton.png) 0 5 0 5;
+    -webkit-border-image: url(/assets/iphone/images/blueButton.png) 0 5 0 5;
     border-width: 0 5px;
 }
 
@@ -114,7 +114,7 @@ body[orient="landscape"] > .toolbar > h1 {
     padding: 0;
     max-width: 55px;
     border-width: 0 8px 0 14px;
-    -webkit-border-image: url(/images/iui/backButton.png) 0 8 0 14;
+    -webkit-border-image: url(/assets/iphone/images/backButton.png) 0 8 0 14;
 }
 
 .whiteButton,
@@ -130,12 +130,12 @@ body[orient="landscape"] > .toolbar > h1 {
 }
 
 .whiteButton {
-    -webkit-border-image: url(/images/iui/whiteButton.png) 0 12 0 12;
+    -webkit-border-image: url(/assets/iphone/images/whiteButton.png) 0 12 0 12;
     text-shadow: rgba(255, 255, 255, 0.7) 0 1px 0;
 }
 
 .grayButton {
-    -webkit-border-image: url(/images/iui/grayButton.png) 0 12 0 12;
+    -webkit-border-image: url(/assets/iphone/images/grayButton.png) 0 12 0 12;
     color: #FFFFFF;
 }
 
@@ -158,7 +158,7 @@ body > ul > li.group {
     border-top: 1px solid #7d7d7d;
     border-bottom: 1px solid #999999;
     padding: 1px 10px;
-    background: url(/images/iui/listGroup.png) repeat-x;
+    background: url(/assets/iphone/images/listGroup.png) repeat-x;
     font-size: 17px;
     font-weight: bold;
     text-shadow: rgba(0, 0, 0, 0.4) 0 1px 0;
@@ -176,7 +176,7 @@ body > ul > li > a {
     padding: 8px 32px 8px 10px;
     text-decoration: none;
     color: inherit;
-    background: url(/images/iui/listArrow.png) no-repeat right center;
+    background: url(/assets/iphone/images/listArrow.png) no-repeat right center;
 }
 
 a[target="_replace"] {
@@ -210,7 +210,7 @@ body > .dialog {
     border: none;
     border-top: 1px solid #6d84a2;
     padding: 10px 6px;
-    background: url(/images/iui/toolbar.png) #7388a5 repeat-x;
+    background: url(/assets/iphone/images/toolbar.png) #7388a5 repeat-x;
 }
 
 .dialog > fieldset > h1 {
@@ -247,7 +247,7 @@ body > .panel {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     padding: 10px;
-    background: #c8c8c8 url(/images/iui/pinstripes.png);
+    background: #c8c8c8 url(/assets/iphone/images/pinstripes.png);
 }
 
 .panel > fieldset {
@@ -314,7 +314,7 @@ fieldset > .row:last-child {
 .toggle {
     border: 1px solid #888888;
     -webkit-border-radius: 6px;
-    background: #FFFFFF url(/images/iui/toggle.png) repeat-x;
+    background: #FFFFFF url(/assets/iphone/images/toggle.png) repeat-x;
     font-size: 19px;
     font-weight: bold;
     line-height: 30px;
@@ -322,7 +322,7 @@ fieldset > .row:last-child {
 
 .toggle[toggled="true"] {
     border: 1px solid #143fae;
-    background: #194fdb url(/images/iui/toggleOn.png) repeat-x;
+    background: #194fdb url(/assets/iphone/images/toggleOn.png) repeat-x;
 }
 
 .toggleOn {
@@ -361,7 +361,7 @@ fieldset > .row:last-child {
     height: 28px;    
     border: 1px solid #888888;
     -webkit-border-radius: 6px;
-    background: #ffffff url(/images/iui/thumb.png) repeat-x;
+    background: #ffffff url(/assets/iphone/images/thumb.png) repeat-x;
 }
 
 .toggle[toggled="true"] > .thumb {
@@ -381,8 +381,8 @@ fieldset > .row:last-child {
 
 #preloader {
     display: none;
-    background-image: url(/images/iui/loading.gif), url(/images/iui/selection.png),
-        url(/images/iui/blueButton.png), url(/images/iui/listArrowSel.png), url(/images/iui/listGroup.png);
+    background-image: url(/assets/iphone/images/loading.gif), url(/assets/iphone/images/selection.png),
+        url(/assets/iphone/images/blueButton.png), url(/assets/iphone/images/listArrowSel.png), url(/assets/iphone/images/listGroup.png);
 }
 
 
