Add #plugin_include_javascript to replace #include_javascript in plugins

--- a/plugins/backup/views/index.html.erb
+++ b/plugins/backup/views/index.html.erb
@@ -1,4 +1,4 @@
-<% javascript_include 'backup' -%>
+<% plugin_javascript_include 'backup' -%>
 
 <h1>Backup</h1>
 <p>You have <b><%= FileSize.new(@library_size).to_s -%></b> in your library.
