--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -11,22 +11,28 @@ h1.main_logo {
 }
 
 h2.plugins_header {
-  width: 300px;
-  margin: 1em auto;
+  width: 620px;
+  margin: 1em auto 0 auto;
   font-weight: normal;
   font-size: 0.8em;
   color: #666;
   text-transform: uppercase;
 }
 
-#widgets {
-  width: 300px;
+#widgets_container {
+  width: 620px;
   margin: auto;
 }
 
-#widgets .widget {
-  display: block;
+.widgets {
   width: 300px;
+  margin: 0 10px 0 0;
+  float: left;
+}
+
+.widgets .widget {
+  display: block;
+  width: 280px;
   background-color: #eee;
   padding: 10px;
   margin: 5px 5px 5px 0;
@@ -35,19 +41,20 @@ h2.plugins_header {
 
 }
 
-#widgets .widget .title {
+.widgets .widget .title {
   text-transform: uppercase;
   font-size: 0.8em;
   font-weight: bold;
 }
 
-#widgets .widget iframe {
+.widgets .widget iframe {
   border: 0;
   padding: 10px 0;
   height: auto;
+  width: 280px;
 }
 
-#widgets .widget .link {
+.widgets .widget .link {
   background-color: #444;
   color: #BBB;
   font-size: 0.8em;
@@ -59,11 +66,11 @@ h2.plugins_header {
   -webkit-border-bottom-right-radius: 5px;
 
 }
-#widgets .widget .link a {
+.widgets .widget .link a {
   color: #DDD;
 }
 
-#widgets .widget .handle {
+.widgets .widget .handle {
   display: block;
   background-color: #FFF;
   height: 10px;
