--- a/plugins/backup/views/backup/index.html.erb
+++ b/plugins/backup/views/backup/index.html.erb
@@ -5,7 +5,7 @@
 <p>The transfer rate is <b>$<%= print_dollars(@transfer_rate.gigabytes) -%> per GB</b>,
    so your transfer cost to back up your library is approximately $<b><%= print_dollars(@library_size * @transfer_rate) -%></b>.</p>
 <p>The storage rate is <b>$<%= print_dollars(@storage_rate.gigabytes) -%> per GB</b>,
-   so your storage cost will be approximately <b>$<%= print_dollars(@library_size * @storage_rate) -%> <u>per month</u></b>.</p>
+   so your storage cost will be approximately <b>$<%= print_dollars(@library_size.to_i * @storage_rate.to_i) -%> <u>per month</u></b>.</p>
 
 <% form_tag backup_url(:action => 'create'), :method => 'post', :id => 'start_backup' do |f| -%>
   <div>
