--- a/app/views/layouts/cloud.html.erb
+++ b/app/views/layouts/cloud.html.erb
@@ -2,7 +2,7 @@
 <html xml:lang="en" lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-    <title>The Cloud Player</title>
+    <title>LimeWire Remote</title>
     <meta name="generator" content="TextMate http://macromates.com/" />
     <meta name="author" content="Eric Wahlforss" />
     <link href="/stylesheets/player.css" rel="stylesheet" media="screen" type="text/css" />
