Clean up the UI a little

--- a/app/views/cloud/index.html.erb
+++ b/app/views/cloud/index.html.erb
@@ -138,8 +138,7 @@
 	  <th>Title</th>
 	  <th>Artist</th>
 	  <th>Time</th>
-	  <th>Description</th>
-	  <th>BPM</th>
+	  <th>Album</th>
 	  <th>Genre</th>
 	</tr>
       </thead>
@@ -155,7 +154,6 @@
   <div id="playlist-row">
     <table>
       <tr>
-	<td></td>
 	<td></td>
 	<td></td>
 	<td></td>
