more work on twopane

--- a/plugins/twopane/views/layouts/application.html.erb
+++ b/plugins/twopane/views/layouts/application.html.erb
@@ -68,13 +68,15 @@
         width: 95%;
       }
 
-      ul#results {
+      ul#results,
+      .tracks {
         padding: 0;
         height: 407px;
         overflow: hidden;
       }
 
-      ul#results li {
+      ul#results li,
+      .tracks .track {
         list-style: none;
         font-size: 1.6em;
         height: 1.6em;
@@ -91,13 +93,13 @@
       }
 
       /* Playlists */
-      #playlist {
+      #playlists {
         width: 50%;
         float: left;
         margin-top: 100px;
       }
 
-      #playlist select#selected_playlist {
+      #playlists select#playlist_id {
         font-size: 2.5em;
         width: 98%;
       }
