--- a/plugins/live_search/views/live_search/index.html.erb
+++ b/plugins/live_search/views/live_search/index.html.erb
@@ -1,6 +1,6 @@
 <% plugin_javascript_include "jquery.hotkeys.js", "live_search", "search" -%>
 
-<% remote_form_for :search, :html => { :id => 'search_form' } do |f| -%>
+<% form_for :search, :html => { :id => 'search_form' } do |f| -%>
   <div id="submit_wrapper">
     <%= submit_tag "Search", :id => 'submit' -%>
   </div>
