Rename world view app

--- a/plugins/world_view/views/layouts/application.html.erb
+++ b/plugins/world_view/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <!--[if IE]>
   <link href="/stylesheets/maps-ie.css?1238874019" media="screen" rel="stylesheet" type="text/css" />
   <![endif]-->
-  <title>twittervision</title>
+  <title>LimeWire: Where are my peers?</title>
 
   <script type="text/javascript" src="/assets/world_view/javascripts/world_view.js"></script>
 
