--- a/plugins/world_view/views/layouts/application.html.erb
+++ b/plugins/world_view/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
  v:* { behavior:url(#default#VML);}
 </style>
   <script src="/javascripts/jquery.js" type="text/javascript"></script>
+  <script src="/javascripts/jquery-ui.js" type="text/javascript"></script>
+  <script src="/assets/world_view/javascripts/canvas.js" type="text/javascript"></script>
   <link href="/assets/world_view/stylesheets/maps.css?1238874019" media="screen" rel="stylesheet" type="text/css" />
   <!--[if IE]>
   <link href="/stylesheets/maps-ie.css?1238874019" media="screen" rel="stylesheet" type="text/css" />
@@ -18,7 +20,18 @@
 <body>
 
   <div id="map"></div>
-  <div id="twitterCount">loading...</div>
+  <div id="search">
+    <form action="/search" method="POST">
+      <input type="text" name="query" id="query" />
+      <input type="submit" value="Search"/>
+    </form>
+  </div>
+  <div id="status">
+    <div class="loading">loading...</div>
+    <div class="hosts"></div>
+    <div class="downloads"></div>
+    <div class="follow"><input type="checkbox" id="followHosts" checked="checked"> Follow Hosts</div>
+  </div>
   <div id="dialogbox" style="display:none"></div>
   <div id="postForm" style="display:none"></div>
   <div id="likebox"></div>
@@ -31,7 +44,7 @@
 
   <div id="mapCaption">
     Part of <A HREF='http://mnutt.github.com/limewire-remote' target='_new'>LimeWire Remote</A>&nbsp;&#8212;&nbsp;
-    Inspired by <A HREF='http://twittervision.com/' target='_new'>TwitterVision</A>, by
+    A modified <A HREF='http://twittervision.com/' target='_new'>TwitterVision</A>, by
     <A HREF='http://twitter.com/twittervision' target=_new>David Troy</A>
   </div>
 </body>
