Moved all the cloud javascript/css to plugin

--- a/plugins/cloud/views/cloud/index.html.erb
+++ b/plugins/cloud/views/cloud/index.html.erb
@@ -73,24 +73,24 @@
   </div>
 </div>
 <div id="footer">
-  <input src="/images/cloud/empty.png" id="prev" type="image" value="&nbsp;" />
-  <input src="/images/cloud/empty.png" id="play" type="image" value="&nbsp;" />
-  <input src="/images/cloud/empty.png" id="next" type="image" value="&nbsp;" />
-  <input title="Shuffle Playlist" src="/images/cloud/empty.png" id="rand" type="image" value="&nbsp;" />
-  <input title="Repeat Playlist" src="/images/cloud/empty.png" id="loop" type="image" value="&nbsp;" />
+  <input src="/assets/cloud/images/empty.png" id="prev" type="image" value="&nbsp;" />
+  <input src="/assets/cloud/images/empty.png" id="play" type="image" value="&nbsp;" />
+  <input src="/assets/cloud/images/empty.png" id="next" type="image" value="&nbsp;" />
+  <input title="Shuffle Playlist" src="/assets/cloud/images/empty.png" id="rand" type="image" value="&nbsp;" />
+  <input title="Repeat Playlist" src="/assets/cloud/images/empty.png" id="loop" type="image" value="&nbsp;" />
   <div id="speaker-mute"></div>
   <div class="ui-slider-1" id="volume">
     <div class="ui-slider-handle"></div>
   </div>
   <div id="speaker"></div>
   <div id="player-display">
-    <img class="logo" src="/images/cloud/logo-mini.png" />
+    <img class="logo" src="/assets/cloud/images/logo-mini.png" />
     <div id="artist">
 
     </div>
     <div id="position"></div>
     <div id="progress">
-      <img class="waveform" src="/images/cloud/empty.png" />
+      <img class="waveform" src="/assets/cloud/images/empty.png" />
       <div class="inner">
 	<div class="playhead"></div>
       </div>
@@ -105,7 +105,7 @@
 <div id="about-box">
   <a href="#close" class="close">X</a>
   <h1>The Cloud Player</h1>
-  <img src="/images/cloud/about-thumb.png" id="about-thumb" height="238" alt="Thumbnail" width="294" />
+  <img src="/assets/cloud/images/about-thumb.png" id="about-thumb" height="238" alt="Thumbnail" width="294" />
   <p>The Cloud Player is a <strong>web-based music player</strong> that let’s you...</p>
   <ul id="feature-list">
     <li id="feature-find"><span></span><strong>Find and play</strong> all tracks from SoundCloud</li>
@@ -116,7 +116,7 @@
   </ul>
   <div id="built-by">
     <p>
-      <img src="/images/cloud/erichenrik.png" height="51" alt="Henrik &amp; Eric" width="90" />
+      <img src="/assets/cloud/images/erichenrik.png" height="51" alt="Henrik &amp; Eric" width="90" />
       Built by <a href="http://eric.wahlforss.com">Eric Wahlforss</a> &amp; <a href="http://hinkeb.com">Henrik Berggren</a> using
       <a href="http://appengine.google.com">Google App Engine</a>, <a href="http://python.org">Python</a>, <a href="http://jquery.com">jQuery</a>,
       <a href="http://www.schillmania.com/projects/soundmanager2/">SoundManager 2</a>, <a href="http://www.everaldo.com/crystal/">Crystal</a> and the <a href="http://soundcloud.com/api">SoundCloud API</a>.
