--- a/plugins/cloud/views/layouts/application.html.erb
+++ b/plugins/cloud/views/layouts/application.html.erb
@@ -5,19 +5,19 @@
     <title>LimeWire Remote</title>
     <meta name="generator" content="TextMate http://macromates.com/" />
     <meta name="author" content="Eric Wahlforss" />
-    <link href="/stylesheets/player.css" rel="stylesheet" media="screen" type="text/css" />
-    <script src="/javascripts/cloud/soundmanager2.js" type="text/javascript"></script>
+    <link href="/assets/cloud/stylesheets/player.css" rel="stylesheet" media="screen" type="text/css" />
+    <script src="/assets/cloud/javascripts/soundmanager2.js" type="text/javascript"></script>
     <script src="/javascripts/firebugx.js" type="text/javascript"></script>
     <script src="/javascripts/jquery-1.2.6.js" type="text/javascript"></script>
     <script src="/javascripts/md5.js" type="text/javascript"></script>
     <script src="/javascripts/jquery-ui-personalized-1.6rc2.js" type="text/javascript"></script>
     <script src="/javascripts/jquery.cookie.js" type="text/javascript"></script>
     <script src="/javascripts/jquery.history_remote.js" type="text/javascript"></script>
-    <script src="/javascripts/cloud/utils.js" type="text/javascript"></script>
-    <script src="/javascripts/cloud/player.js" type="text/javascript"></script>
-    <script src="/javascripts/cloud/playlist.js" type="text/javascript"></script>
+    <script src="/assets/cloud/javascripts/utils.js" type="text/javascript"></script>
+    <script src="/assets/cloud/javascripts/player.js" type="text/javascript"></script>
+    <script src="/assets/cloud/javascripts/playlist.js" type="text/javascript"></script>
 
-    <link href="/images/cloud/favicon.ico" rel="shortcut icon" />
+    <link href="/assets/cloud/images/favicon.ico" rel="shortcut icon" />
 
   </head>
   <body class="logged-in" unselectable="on">
@@ -27,7 +27,7 @@
 	<a href="" id="about">About</a> |
 	  <a href="{{login_url}}">Limewire?</a>
       </div>
-      <img src="/images/cloud/logo.png" id="logo" />
+      <img src="/assets/cloud/images/logo.png" id="logo" />
       <input name="q" maxlength="50" accesskey="f" id="q" type="search" value="Search Artists &amp; Tracks" />
     </div>
 
