--- a/plugins/cloud/views/cloud/index.html.erb
+++ b/plugins/cloud/views/cloud/index.html.erb
@@ -59,10 +59,16 @@
     <table id="track-drag-holder">
     </table>
 
+    <div id="plugin_container" src=""></div>
+
   </div>
 </div>
 <div id="sidebar">
+  <h3>Playlists</h3>
   <ul id="playlists">
+  </ul>
+  <h3>Plugins</h3>
+  <ul id="plugins">
   </ul>
   <div id="create-playlists">
     <a href="{{login_url}}" id="add-playlist">Playlist</a>
